# conversorTemp

./: designer.exe - Atalho.lnk  gerar_arquivo_python_e_exe.txt
conversorTemp/: .gitignore  pyproject.toml
conversorTemp/conversortemp/: conversor.py  main.py
conversorTemp/tests/: test_conversortemp.py
conversorTemp/widgets/: untitled.ui
