[tool.poetry]
name = "conversorTemp"
version = "0.1.0"
description = ""
authors = ["Carlos Junior <cajunior.ps@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
PyQt5-stubs = "^5.15.2"
PyQt5 = "5.15.4"
pyinstaller = "^4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
